--- a/application/views/scripts/groupement/display.phtml
+++ b/application/views/scripts/groupement/display.phtml
@@ -152,7 +152,7 @@
 
 	// Partie prev ----------------------------------------------------------------------------------------------------------------
 
-    // @fixme: Voir comment modifier pour utiliser typeahead
+    // @fixme: Voir comment modifier pour utiliser typeahead => Utiliser JQuery Autocomplete plutôt ?
 	// Auto-complétion des préventionnistes
 	// $("#preventionnistes-autocomplete").typeahead({
 	// 	minLength: 3,
